--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: [The title of your site]
 description: [A short description of your site's purpose]
-theme: jekyll-theme-dinky
+theme: jekyll-theme-slate
