--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: [The title of your site]
+title: [Natural Language Processing: The Arabic Glossary]
 description: [A short description of your site's purpose]
 theme: jekyll-theme-slate
