--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: [Natural Language Processing: The Arabic Glossary]
+title: Natural Language Processing: The Arabic Glossary
 description: [A short description of your site's purpose]
 remote_theme: pages-themes/slate@v0.2.0
 plugins:
