--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Natural Language Processing: The Arabic Glossary
-description: [A short description of your site's purpose]
+title: NLP: The Arabic Glossary
+description: A bilingual glossary for NLP termenology
 remote_theme: pages-themes/slate@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
