--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ description: A bilingual glossary for NLP termenology
 remote_theme: pages-themes/slate@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
+
+theme: jekyll-theme-slate
