--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: NLP: The Arabic Glossary
+title: NLP - The Arabic Glossary
 description: A bilingual glossary for NLP termenology
 remote_theme: pages-themes/slate@v0.2.0
 plugins:
