--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Natura Language Processing - The Arabic Glossary
+title: Natural Language Processing - The Arabic Glossary
 description: A bilingual glossary for NLP terminology
 remote_theme: pages-themes/slate@v0.2.0
 plugins:
