--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,7 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
 theme: jekyll-theme-slate
+include:
+  - CONTRIBUTING.md
+  - README.md
+  - LICENSE.md
